Corrected z-index

--- a/task-codevector/src/components/Toolbar/Toolbar.css
+++ b/task-codevector/src/components/Toolbar/Toolbar.css
@@ -8,7 +8,7 @@
   border-width: 3px;
   border-style: solid;
   border-bottom-color: #d50000; 
-    
+  z-index: 500;
 }
 
 .toolbar__navigation {
